[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[project]
name = "python_utils"
version = "0.0.1"
authors = [
  { name="Krensing GmbH", email="info@krensing.com" },
]
description = "Python Utils"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[project.urls]
Homepage = "https://github.com/mkrensing/python-utils"
Issues = "https://github.com/mkrensing/python-utils/issues"